# period2Lab5

./: CMakeLists.txt  README.md
GeometricShapes/: CMakeLists.txt  Circle.h  Collection.h  Line.h  Matrix.h  Obj.h  Point.h  Polygon.h  Quadrate.h  String.cpp  String.h  Vector.h
geom/: CMakeLists.txt
vectorLib/: CMakeLists.txt  Matrix.h  Vector.h
